--- a/breast_cancer_classification.ipynb
+++ b/breast_cancer_classification.ipynb
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "# data type of Bunch (similar to dictionary)\n",
+    "# data type of Bunch\n",
     "data.keys()"
    ]
   },
@@ -262,13 +262,7 @@
       "12/12 [==============================] - 0s 9ms/step - loss: 0.1795 - accuracy: 0.9467 - val_loss: 0.1398 - val_accuracy: 0.9840\n",
       "Epoch 57/100\n",
       "12/12 [==============================] - 0s 6ms/step - loss: 0.1662 - accuracy: 0.9575 - val_loss: 0.1378 - val_accuracy: 0.9840\n",
-      "Epoch 58/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 58/100\n",
       "12/12 [==============================] - 0s 6ms/step - loss: 0.1648 - accuracy: 0.9588 - val_loss: 0.1359 - val_accuracy: 0.9840\n",
       "Epoch 59/100\n",
       "12/12 [==============================] - 0s 7ms/step - loss: 0.1666 - accuracy: 0.9385 - val_loss: 0.1341 - val_accuracy: 0.9787\n",
